[package]
name = "ghworker"
version = "0.1.0"
authors = ["Samuel Kubai <kamausamuel11@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
csv = "1.1"
dotenv = "0.15.0"
envy = "0.4"
env_logger = "0.7.1"
graphql_client = "0.9.0"
log = "0.4.0"
serde = { version = "1.0.106", features = ["derive"] }
serde_bytes = "0.11"
serde_derive = "1.0.27"
structopt = "0.3.13"
reqwest = "^0.9"
async-std = "1.6.1"
sqlx = { version = "0.3.5", features = ["postgres", "chrono", "json", "runtime-async-std"] }
postgres = { version = "0.17.3", features = ["with-chrono-0_4"] }
kafka = "0.8.0"
bincode = "1.3.1"
serde_json = "1.0.55"
